_build/html/reports/Data_Cleaning.log
Traceback (most recent call last):
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/client.py", line 559, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/dockreg/anaconda3/envs/clustering_assignment/lib/python3.7/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
#agg_95 = choice_95.apply(pd.Series.value_counts, axis=0)

#agg_100 = choice_100.apply(pd.Series.value_counts, axis=0)

#agg_150 = choice_150.apply(pd.Series.value_counts, axis=0)
#choice_95
#agg_95 = agg_95.fillna(0)
#agg_95["Deck"] = (np.arange(len(agg_95))+1)

#agg_95 = agg_95.fillna(0)
#agg_95["Deck"] = (np.arange(len(agg_95))+1)
#agg_95 = agg_95.pivot(columns='Deck', values=['Choice_1', 'Choice_2', 'Choice_3', 'Choice_4', 'Choice_5', 'Choice_6',
       'Choice_7', 'Choice_8', 'Choice_9', 'Choice_10', 'Choice_11',
       'Choice_12', 'Choice_13', 'Choice_14', 'Choice_15', 'Choice_16',
       'Choice_17', 'Choice_18', 'Choice_19', 'Choice_20', 'Choice_21',
       'Choice_22', 'Choice_23', 'Choice_24', 'Choice_25', 'Choice_26',
       'Choice_27', 'Choice_28', 'Choice_29', 'Choice_30', 'Choice_31',
       'Choice_32', 'Choice_33', 'Choice_34', 'Choice_35', 'Choice_36',
       'Choice_37', 'Choice_38', 'Choice_39', 'Choice_40', 'Choice_41',
       'Choice_42', 'Choice_43', 'Choice_44', 'Choice_45', 'Choice_46',
       'Choice_47', 'Choice_48', 'Choice_49', 'Choice_50', 'Choice_51',
       'Choice_52', 'Choice_53', 'Choice_54', 'Choice_55', 'Choice_56',
       'Choice_57', 'Choice_58', 'Choice_59', 'Choice_60', 'Choice_61',
       'Choice_62', 'Choice_63', 'Choice_64', 'Choice_65', 'Choice_66',
       'Choice_67', 'Choice_68', 'Choice_69', 'Choice_70', 'Choice_71',
       'Choice_72', 'Choice_73', 'Choice_74', 'Choice_75', 'Choice_76',
       'Choice_77', 'Choice_78', 'Choice_79', 'Choice_80', 'Choice_81',
       'Choice_82', 'Choice_83', 'Choice_84', 'Choice_85', 'Choice_86',
       'Choice_87', 'Choice_88', 'Choice_89', 'Choice_90', 'Choice_91',
       'Choice_92', 'Choice_93', 'Choice_94', 'Choice_95'])
#agg_95

------------------

[0;36m  File [0;32m"/var/folders/hx/6lc74_f56l757kmmkybd34xr0000gn/T/ipykernel_63391/3361174304.py"[0;36m, line [0;32m13[0m
[0;31m    'Choice_7', 'Choice_8', 'Choice_9', 'Choice_10', 'Choice_11',[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unexpected indent

IndentationError: unexpected indent (3361174304.py, line 13)

